Updated some in Atom
Heyy

--- a/Frank Lead/index.html
+++ b/Frank Lead/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Frank Lead</title>
+    <title>The Mitch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.min.css" type="text/css">
